--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1034,7 +1034,7 @@ footer {
     min-height: 67px;
 
     &+p {
-        display: -webkit-box;
+        display: -webkit-box !important;
         -webkit-line-clamp: 3;
         -webkit-box-orient: vertical;
         overflow: hidden;
