--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1637,7 +1637,7 @@ a.full-portfolio-btn {
 .step-images-slider-desktop .swiper-slide img,
 .step-images-mobile-slider .swiper-slide img {
     width: 100%;
-    height: 500rem;
+    aspect-ratio: 1/1 !important;
     object-fit: cover;
 }
 
