--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1716,6 +1716,7 @@ a.full-portfolio-btn {
     }
 
     p {
+        text-align: center;
         color: #121212;
         font-size: 24rem;
         font-weight: 300;
