--- a/resources/scss/styles.scss
+++ b/resources/scss/styles.scss
@@ -1709,14 +1709,29 @@ a.full-portfolio-btn {
     p {
         text-align: center;
         color: #121212;
-        font-size: 24rem;
+        font-size: 18rem;
         font-weight: 300;
         line-height: 1em;
-        text-transform: uppercase;
-        margin-bottom: 30rem;
+        margin-bottom: 20rem;
+        text-transform: none;
 
         @include media(769) {
-            margin-bottom: 36rem;
+            font-size: 25rem;
         }
     }
+}
+
+.project-gallery--parent .col-12 {
+    margin-top: 25rem !important;
+}
+
+@media screen and (max-width: 768px) {
+    .project-gallery--parent .col-6 {
+        margin-top: 0 !important;
+    }
+
+    .project-gallery--parent .col-12 {
+        margin-top: 5rem !important;
+    }
+    
 }
